Update overleaf to github (added abstract, introduction and interview with KPN)

--- a/Thesis/LaTeX/Appendices.tex
+++ b/Thesis/LaTeX/Appendices.tex
@@ -269,13 +269,119 @@
 	We have a lot of data coming in. Before the chatbot, customers were already contacting us on Messenger. We simply determined on that basis that we have a lot of technical questions (internet, TV, etc.). Then we focused on that too. That way, we first analysed the data. With that, our technical flows are more extensive, so that we can then also capture them. For example, there is a squad that came to us with a modem swap, they want to improve certain aspects of it and they see in the bot that it is not optimal, so now we are looking together at how we can do it better, what are the right questions to ask. Everything is based on data analysis.\\
 	Of course, we also take into account the experience of our agents. That is also valuable information that they provide. We can't put everything in the chatbot, because otherwise you get a 40-step plan and that's not the intention. We try to pass that on as best we can or guide the customer to their solution.
 	
+	
 	\section{Interview with KPN}
 	\label{in:KPN}
+	Interviewed person : Justin Wesseling (Specialist Process Design)
 	\subsection{The current state of the customer service chatbot.}
-	\subsection{The benefits that the chatbot brings to KPN.}
-	\subsection{The business value of the chatbot.}
-	\subsection{The future vision of the chatbot.}
+	\subsubsection{For what purposes is the conversational agent mainly used? Is it for FAQ,
+		to assist the help desk, deal with complaints, helping with sales or other
+		functionalities?}
+	I think it's a combination of exactly the things you mean or mentioned. Our chatbot is on our website and can be contacted via a chat button on the “contact” page. In principle, the customer can ask any question to the chatbot. It works that the moment we recognize the question, we will give an answer that leads to self-service if we think we can answer the question ourselves online. In the case of complaints, yes, we do not think there is a self-service option. In the event of complaints, we actually send the customer directly to live chat. So on the one hand we try to offer self-service in the bot and the second big goal is to shorten the chat time for our employees, by already asking a number of questions to the customer so that our employees don't have to do it again. to do. These are, for example, requesting data such as zip code, house number, bank account number, and things like that. For sales we also have a more proactive chatbot that we sometimes offer in our shops. You should see this as a pop-up that appears when we measure on the page that the customer has been in a shop for a little longer and in which we then say, “Hey, do you need some extra help?”. If the customer needs extra help, we will forward him/her to live chat.
 	
+	\subsubsection{The chatbot will not handle a purchase by itself?}
+	No, that's actually because it's not technically possible yet. We currently do not have a link in our bot with the order systems, so that is not possible yet.
+	
+	\subsubsection{Through which platform can you communicate with your chatbot?}
+	At the moment it is really only on the website. There are plans to expand that to other platforms, but that is still in the future. So it's really only on the website. Customers also have a “My KPN” app, from which customers can also start the chatbot if they are looking for answers, but that is actually also the underlying website. So it is not a separate place.
+	
+	\subsubsection{In which languages can the chatbot be used, is that only in Dutch or also in English?}
+	That is also in English, only it is a lot less extensive. We have added a number of English sentences in our classification model and our language model, so that if a customer starts speaking English, we can also recognize this as an English-speaking customer. In that case, we do not offer the full chatbot, so we do not answer all questions that we answer in Dutch. We do have some topics that we think are common. The answers are often also somewhat generic, so for example billing information can be found here on the website; if you want to order something, you can do so on this page; if you have a malfunction, check if there is a service generic malfunction. It is small-scale, but therefore also available in English.
+	
+	\subsubsection{It is actually a chatbot that will steer the customers in the right direction, but will not really provide the solution itself?}
+	While we give really specific answers to many topics in Dutch, we don't actually do that in English. What we often see with English customers is that they are simply looking for an employee. We then also request the data (postal code, ...) in English. It is easy to configure in the chatbot program.
+	
+	\subsubsection{Besides, there are no other languages?}
+	No, also because there is no real need for this in the Netherlands.
+	
+	\subsubsection{Do you have an idea of what age groups comprise the majority of users? Is
+		it 20 or younger, between 21 and 40, between 41 and 60 or 60+}
+	That's not something we're actively monitoring right now. We do know that a large part of KPN customers is a somewhat older target group. But whether the chatbot use is a reflection of our "base", or whether they are younger people, we don't really have an idea at the moment. I think in terms of language we're keeping it pretty neutral, so it's not like we're really trying to target any particular age group. In principle, it is there for everyone.
+	
+	\subsubsection{The chatbot must of course be able to answer different types of questions.
+		Do you have an idea about what kind of questions the chatbot can answer?
+		Yes-no questions, open questions, vague questions, ...?}
+	
+	I find this a bit of a tricky question because it very much depends on what exactly customers are asking. Behind the chatbot is a classification model. We have about 150 different user intents. That is actually 150 different "boxes" in which a customer's question can fall. It could be that if a customer says, "I have an internet problem", then that falls into the box of internet problems, and then that customer will often go through a flow reasonably well. It can also be that a customer says something of which we are not entirely sure, in which case we ask a sort of control question in which we ask, "Did you mean that you have an internet malfunction?", and then we often see that the conversation goes well. Of course, there are also questions from customers that we misclassify. One of the nicest or perhaps most telling examples is when customers want to cancel a subscription or actually someone's next of kin wants to cancel a subscription. We have a separate desk for that, this is the next of kin desk. It is for example for the case of: "My grandmother has passed away and I want to cancel her subscription", then we recognise that as "cancel deceased subscription", and so then we offer the next of kin desk content. We've also had people say their mobile phone died. It's almost the same language, but then you don't want to say, "condolences" and then be sent to the next of kin desk. At that moment, you want to show the content for "my phone is broken". So in terms of language, it's sometimes very tricky. You'd rather it be like this than like that, so you don't say to the grandma, have you turned the on and off is, that's not the intention because mentally that's quite difficult. Another example that we often see is when we misclassify something about disturbances. This often happens because we think that a customer means that he had a breakdown, while this is actually not the case. "I am having a fault" is almost the same sentence as "I am not having a fault". If a customer types something and the bot then returns "I understand you have an internet outage", and if that customer then replies "I have no outage.", the bot still thinks there is an internet outage. These are challenges that we are trying to solve in the content by asking control questions and also providing opportunities for customers to click a button ("I have another question" or "I meant something else"). This might keep the conversation going because there is nothing more frustrating for customers than feeling stuck. I think that is what causes the most frustration in our customers.
+	
+	\subsubsection{Is there also data on the number of cases where the conversation goes wrong or a question is misunderstood?}
+	That is difficult to observe, because the bot itself does not know whether it has misclassified anything. We do that a bit randomly. We are actually constantly improving the language model/classification model by adding or removing sentences, but because it is a kind of statistical model, it is also quite difficult. If you add weight to one intent and add extra sentences, then you don't always know what happens in the rest of the language model. It's a kind of water bed, where if you push more somewhere, it comes up again somewhere else. It's always a bit of a wet-finger exercise. I think that unfortunately we don't always quantify this. 
+	
+	\subsubsection{A moment ago, it was said that the intent is recognised and then a sort of step-by-step plan is followed to arrive at the right solution. Does your chatbot consist of \acrshort{ai} that recognises the intent and is then rules-based? Or is it fully rules-based or fully \acrshort{ai}-based? What architecture is behind that?}
+	We actually buy the chatbot from another party, Nuance, which is a big company in speech recognition and things like that. It actually works like this, so we have this classification model that is built from the intentions and behind each intent, there is a dialogue. A dialogue is a separate module of the programme, therefore we have built a dialogue for each of these 150 intents. Indeed, they just go from one to two and three and four. Sometimes customers give us more information and we can skip certain steps. It is all rules-based, in the sense that the system itself is not intelligent and learns. We can recognise certain parts of sentences. For example, if the customer says, "I have a problem," we will first ask, "OK, is it about your mobile subscription or your home subscription?" because those are really two different things. If a customer says, "I have problems with my fixed Internet", then we recognise that "fixed Internet", because we have given it a sticker in the classification model for years.  The class of internet in this case is simply fixed internet, so then you can skip the first question, "Is it about mobile or is it about fixed?". You make it more relevant for a customer. We try to use all the information that customers give to the bot to make the conversation as smooth as possible.
+	
+	\subsection{The benefits that the chatbot brings to KPN.}
+	\subsubsection{What kind of services can the chatbot primarily provide? For example,
+		being able to buy or stop a subscription, request an invoice, provide someone
+		with their Personal Identification Nuber (PIN) or Personal Unblocking Key
+		(PUK) code, etc.}
+	I think I'll come back to what I just said. There are actually two things that the chatbot can do. You have to see the chatbot as a kind of work preparer for our live chat agents. We try to make the subsequent conversation with an agent shorter by already asking for certain data. This can be personal data, but also specific steps. For example, in the event of an internet malfunction, the bot will then say: "You just need to reboot your modem". We then also show the employee that these steps have already been offered so that an employee can continue the conversation instead of doing everything all over again. On the other hand, the chatbot will guide the customer to the right page on kpn.com, so that the customer can find the answer there himself. Overall, these are the most important tasks of the chatbot.
+	
+	\subsubsection{Is there a call to an agent after every conversation with the chatbot, or can the chatbot handle problems on its own?}
+	Yes, the second one. I think about 50\% of the calls that are started in the bot go through to a staff member. That doesn't mean that we don't solve the other 50\%, because there are also customers who drop out during the conversation. These are people who then no longer feel like it or who get stuck, but of course we try to avoid that. We do solve at least 15\% to 25\%. That's not always in the bot, because some questions we can actually answer in the bot, but not in other cases. If, for example, a remote control is broken, we can just send a new one when the customer logs on to the site. Unfortunately, the chatbot can't do that yet because we don't have that link between the bot and the backend systems. In that case, we'll redirect the bot to the KPN website, which is the cooperation the bot actually has with the online pages. In principle, customers like that won't have to go through an employee again, because they'll come in with a question like "I've got a broken remote control". We then say, "You can request a new remote control here", and most Dutch people are happy with that, at least.
+	
+	\subsubsection{What about the workload of customer service staff?
+		What proportion of the requests is routed back to the employee?}
+	It's not that about 50\% of the cases that go through to an employee have always failed in the chatbot and therefore have gone through to an employee. There are also plenty of subjects in which we, from a policy point of view, would like a customer to proceed to a staff member. For example, when cancelling a subscription, we would like to make a retention attempt. Of course, there are also subjects for which self-service is not at all adequate. For example, when it comes to complaints, we simply want to pass them on to a member of staff. 
+	
+	\subsubsection{Is there also a possibility to say directly to the chatbot: "I would like to call or chat live with a member of staff"?}
+	It is indeed possible, but then we will first try to do the first steps of the conversation with the chatbot. For example, if a customer says in the first interaction: "I want to speak to an employee", we will say: "You want to speak to an employee, that's possible, but what is your question?". In this way, we still enter the normal chatbot. If a customer asks a different question first and then indicates halfway through the conversation "Can I speak to an employee?", then we escalate directly to an employee, so we don't make another self-service attempt. 
+	
+	\subsubsection{Is it also possible to find a telephone number on the site to call the employee directly?}
+	You can also contact us directly by telephone. We do show a telephone number on our site, but not as the first one, it is sometimes a bit hidden. What I also mentioned is that when you call our customer service, you also have to say your questions first, and then there is a classification in a kind of intent, there we will also make a self-service attempt. 
+	
+	\subsubsection{Is this also with \acrshort{ai} that the speech recognition is done or is it rather manual?}
+	No, that is also done by a system, but that is a different system. The customer's question is converted into text and then this is also held against another classification model, so this is the same classification model, only the supplier is different. We do want to merge this in the future, but not yet. On the phone side, it is also classified according to a certain subject. The example I just mentioned of the remote control, we can do that on the phone. We can then recognise whether there is any customer data attached based on the number the customer calls with. For example, if I call with my 06 number, then my 06 number is also registered with KPN with the info if he has a mobile subscription or a fixed subscription with television. If I were to call and say: "I want a new remote control, because it's broken", then we start a check in the \acrfull{vrs}, without you speaking to the employee, but simply with the system, to see if you qualify for a new remote control, and if so, we just send it.
+	
+	\subsubsection{What is the customer's willingness to use the chatbot?}
+	That is quite difficult to express in figures. What we do is ask for qualitative feedback from customers. When you start a chatbot, it opens in another window and there is also a button to give feedback. What we see there is often negative feedback. I think that's a bit inherent to giving feedback, if your problem is solved, why would you give extra feedback on your user experience. If you get stuck or you're in a loop or you don't get the answer you want, then you're going to give feedback. So it doesn't say much about the overall performance. If I have to make an estimate, I think only 1/5 or 20\% would like to speak to an employee. We've also done some research with a customer lab in which we invited different customers or potential customers for a whole day and let them play with our bot. This research showed that if the bot works, customers will be very willing to solve things themselves, but if it doesn't work, there will be frustration and then they just want the employee to solve it. I do think that most of our customers who call or chat do not do so because they want to speak to an employee, but because they want a problem solved or have a question that needs answering. If a bot does this well, that's totally fine. It only becomes an issue if a bot doesn't do this well, and at that point you just want to be able to contact the employees easily. 
+	
+	\subsubsection{Do you have a view on the distribution between the use of the voice system and the chatbot?}
+	Yes, there is a lot more calling. I think an order of 10 larger. So that means there are 10 times more phone calls than chats with the chatbot.
+	
+	\subsubsection{There is a positive side to the chatbot, but of course also a negative side.
+		Have you noticed more frustrations from users or more complaints with the
+		chatbot?}
+	So what we also do, especially if customers have gone on to live chat, then after the call or a day after the call we send an email to some customers and then they can give feedback on it, and then we measure a number of things. That is the \acrshort{nps} score, for instance. The \acrshort{nps} score is the 'net promoter score', and in that we actually saw to what extent people are prepared to recommend KPN to acquaintances or friends. More important are actually the other two. That is the \acrshort{ces}, which is the "customer effort score" and the \acrshort{gcr}. That is the "Goal completion rate", this is actually the question, "did you reach your goal?" That is expressed in a percentage and that says something about how well the customer was helped. The "customer effort score" is more how much effort it took you to find the answer. What we do is compare the scores on chat and on the phone and what we see on certain topics, for example WiFi, is that the \acrshort{ces} is a lot lower on the phone than chat. It's also simply because WiFi is quite a complex subject, which can't be solved entirely via chat, but can be solved by someone on the phone. So it's better to have an employee who can guide a customer all the way through this. On that basis, we also make choices to pass on certain subjects from the chatbot to the call.  Again, it's difficult to quantify. What does frustration mean for someone? You also don't always know what customers think. We can collect a great deal of data, but it is of course very difficult to measure customer sentiment. 
+	
+	\subsubsection{Is there any sentiment analysis in the chatbot, for example, if someone asks a question or gives an answer using CAPS LOCK, is that also noticed?}
+	We did look at it in the past to see if we could do something with it, but then we decided not to use it.
+	
+	\subsubsection{Is this a particular thing that you or you guys want to deal with in the future?}
+	What we do in our data analytics department is to run analyses on all chat and call transcripts. When someone calls us, the conversation is actually transcribed, that goes automatically, so that is also a speech-to-text programme behind it and then \acrshort{ai} is released to distil a kind of step-by-step plan from all those conversations. You can, of course, link it to the feedback that customers give on such conversations and then you can look at this: you have a collection of conversations that went well, then you look at what was good about them and can you identify certain characteristics that apply generically to all good conversations. And the same applies to conversations that went badly: is there a kind of general denominator?
+	
+	\subsection{The business value of the chatbot.}
+	\subsubsection{Do you have an idea about the increase in sales due to the use of the chatbot
+		and whether there is any at all?}
+	I don't know. In the sense of, I don't know exactly what it costs to keep the chatbot running. You would then actually have to look at what costs you take with that. Look, we buy this from a company and that costs money. Those are actually direct costs, but we also have two teams coming in to work on the bot. Yes, wouldn't you include that as a cost? So I don't really know what, I can't really put a number on it. The direct revenue is in the sense that we also save costs, of course, because fewer chats go to a customer service employee, so that, yes, to put it very directly, we need fewer customer service employees.
+	
+	\subsubsection{Is there any view on how many fewer people are needed than before the chatbot?}
+	Yes, I find that somewhat difficult to express, but well, you could do some calculations. You can do it now with the wet finger. I estimate that we need 25\% fewer agents than before the chatbot.
+	
+	\subsubsection{We assume that the chatbot is available 24/7, but what happens if it cannot solve a question outside of working hours? Is the question still answered or is it postponed until the next working day?}
+	Yes, the bot does, and so do our employees for malfunction questions, but we do have a technical opening hours check in our chatbot. For example, after 8pm we don't pass on invoice questions to an employee, because they have gone home, so then they have to contact us again tomorrow. 
+	
+	\subsubsection{So then that person gets a message of "It's out of hours, please try to send your question again tomorrow"?}
+	For most questions, we will first try to point customers to the right place on kpn.com, so that they can find an answer themselves. But if, for example, they say at 3 a.m. "I want to speak to an employee", well, they're not there and that won't happen. We do offer the chatbot, but after that there is no handover to the live chat. 
+	
+	\subsubsection{Will these chats be kept so that they do not have to be done again?}
+	No, it really has to be done again.
+	
+	\subsubsection{The chatbot was initially introduced because you wanted to create business value with it. Where there also other purposes? Did you want to create something unique, for marketing purposes or …?}
+	I don't think that played a big part, but look what you see with a lot of companies is that a chatbot is initially deployed on one subject and then it is actually distributed from there. KPN actually chose to say from the outset, "We're going to put the chat in right across the board". That was a slightly different strategy in which we did say, or indeed in which, in the beginning, the work preparation simply asks for data so that the service employee would spend less time on it. We actually did that very well from the start, and then we gradually started adding all kinds of self-service options. We are still working on that. In the beginning, those self-service options were often referring to a place on the website, and we are now at a point where we are going to try to pull some more possibilities into bone itself by also creating access to our back-end system. That is technically a challenge. So yes, that's what we're up against, and certainly because we've already done quite a lot of optimisation in terms of content. If someone has an invoice question, at a certain point you are done explaining this and that. You find your invoice at that place, this is what it can contain. In terms of content, at a certain point you're done with that. The next step, of course, would be to be able to simply say, OK, this is your last invoice, it costs so much, and there is so much on it, and you have to pay it. But we can't do that at the moment.
+	
+	\subsubsection{How do you know if the customer is happy with the chatbot?}
+	In the chatbot, there is the possibility for the customer to choose to give feedback, so just in the dropdown menu. If customers proceed to live chat, in most cases the employee will indicate at the end of the conversation whether the customer still wants to give feedback. This can be done via a form. We don't ask for explicit feedback if a customer has only been in the chatbot, because then we often don't know who has been in the bot. So that's a bit tricky. But if the customer has been in contact with the actual customer service, then often a request for feedback follows, a feedback form. 
+	
+	\subsection{The future vision of the chatbot.}
+	\subsubsection{What are the most important points of attention for the near future?}
+	We also want to be available in more places, so that's actually from the contact strategy. KPN wants to be where its customers are. That translates into adding more touchpoints, which may be to start from our app and chat even more easily, but also, for example, a Whatsapp or other contact options. We also want to harmonise it more from our strategy. What we actually want is that the moment a customer starts a conversation with us in Whatsapp, for example, we then know that when a customer calls, we also know that he or she has already asked a question in Whatsapp. This makes it quite channel-specific, so that we really keep the context. You can compare this to the situation where if I were to invite you to come and watch football with me tomorrow, I would say this now, and then you would be at the door tomorrow and I would say: "What are you doing here? That's how it often is in the customer service world now. We want to have that ongoing conversation with the customer and therefore keep the context. That's easy to say. It's technically difficult to do, but we're also trying to rationalise some systems, so that eventually we'll have one system where we can talk to our customers across all channels. That's actually a bit of a vision for the future.
+	
+	\subsubsection{What additional functions do you expect in the future? Are you going to make the chatbot more fully \acrshort{ai}-based or what are the plans?}
+	That also depends a bit on what the supplier of the programme will do. We don't have much say in that. We can go there and press and say that we want this functionality, but my experience is that many chatbots are still a bit underwater, with if-then statements. I think that is still mostly rules-based rather than real \acrshort{ai} that understands and learns and develops itself.
+	
+	\subsubsection{Where does the knowledge/expertise for the chatbot come from? How do you know what scenarios to add to the chatbot?}
+	Mainly through data analysis, and that's the advantage of using the bot across the board right from the start. We simply collected real customer questions and looked at what the most questions were about and then designed flows for the subjects that were asked the most often. We are still doing that. Every so often, we just go through a box of conversations and see if there are any topics in there that we don't have answers for.
 	
 \end{appendices}
 
