--- a/Thesis/LaTeX/Introduction.tex
+++ b/Thesis/LaTeX/Introduction.tex
@@ -2,4 +2,10 @@
 \pagestyle{headings}
 
 \chapter{Introduction}
-
+\label{ch:introduction}
+For companies, customer service is an important aspect, if they offer this service in the best possible way, they can improve the customer experience and retain the trust of the customer. 
+The advent of \acrfull{ai} offers a new perspective to deliver this service in an innovative way. \acrshort{ai} in combination with other technologies, such as \acrshort{nlp} and \acrshort{ml}, allows companies to scale their relevant and personal customer interactions without losing the necessary qualities \citep*{Quintino2019, Wilson2017}. Companies that capitalise on these technological advances can derive competitive advantages from them, as they can make their business processes more efficient and subsequently be more productive.\\
+\break
+Chatbots have already entered the (general) customer service scene of several industries a few years ago, these bots offer the possibility to interact with customers in an automated way. An industry in which customer relations are very important is the telecom sector. Different providers offer the same kind of products within the same range of tariffs, so the quality of customer service plays an important role in customer churn. From an observation of the Belgian and Dutch telecom market, it quickly became clear that the vast majority of providers have a customer service chatbot. The impact of these customer service chatbots on the customer experience and the internal policy of the telecom providers is unprecedented or minimally researched.In order to gain more insight into this impact, this research will focus on the following: on the one hand, it will examine what influence chatbots have on providers' current policies, and then the future vision of chatbots will also be mapped out. On the contrary, the research will take a closer look at customer satisfaction and what the customer exactly expects from the different aspects within a customer service chatbot.\\
+\break
+The findings from this research can be used by the various telecom providers to improve their chatbot and to close the gap between the current chatbot state and the corresponding customer expectations.
