--- a/Thesis/LaTeX/Thankword.tex
+++ b/Thesis/LaTeX/Thankword.tex
@@ -1,4 +1,13 @@
 \chapter*{Thankword\hfill} \addcontentsline{toc}{chapter}{Thankword}
+\label{ch:thankword}
 
-
-Add thankword here.
+Vedavyas Etikala
+Jan Vantienen
+Chatlayer
+Sandrine D'oreye
+Nike van Heeswijk
+Wisse Smit
+Laura Overwijk
+Chiara Portolani
+Justin Wesseling
+Alle respondenten anoniem bedanken --> bedankt aan iedereen die mee aan de survey heeft gedaan
