--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -9,10 +9,10 @@ A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{
 \break
 The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet”\citep{Lexico2022}. Some more technical definitions are:
 \begin{enumerate}
-    \item A chatbot is an artificial intelligence program and a \acrfull{hci} model \citep{Bansal2018}.
-    \item A chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
-    \item A chatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
-\end{enumerate}
+	\item A chatbot is an artificial intelligence program and a \acrfull{hci} model \citep{Bansal2018}.
+	\item A chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
+	\item A chatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
+\end{enumerate}\\
 \break
 Multiple types of chatbots exist, going from text-based to voice-based to a combination of both \citep{Radziwil2021}. Below is a more detailed taxonomy of chatbots.\\
 
