--- a/DataAnalysis/DataAnalysisNotebook.Rmd
+++ b/DataAnalysis/DataAnalysisNotebook.Rmd
@@ -35,7 +35,7 @@ The data has been anonimised in Excel. A new column was created called 'taskCate
 - Complaint
 - Sales
 
-From the 48 entries, we had to throw 5 away:
+From the 63 entries, we had to throw 5 away:
 
 - 3 because of the used chatbot: they were no telecom chatbots.
 - 1 entry was a duplicate.
@@ -324,6 +324,8 @@ barplot(table(KPN$degree),
 ```{r}
 ggplot(d, aes(x=chatbot, y=age)) + geom_point(colour="black", size=1) + stat_summary(fun=mean, geom="point", shape=1, size=2, colour="red", fill="red") + ggtitle("Age per chatbot provider")
 tab1(d$age, sort.group = "decreasing", cum.percent = FALSE)
+mean(d$age)
+sd(d$age)
 ```
 
 #### Degree
@@ -1025,8 +1027,8 @@ ggplot(satDf, aes(x=`Satisfaction Coefficient`,
   geom_text(aes(label = seq(nrow(satDf))), size = 3, nudge_x = 0.02,
             nudge_y = -0.015, check_overlap = TRUE) +
   # if labels are overlapping, change positions with this
-  #geom_text(aes(label = 4), size = 3, nudge_x = -0.015,
-                #nudge_y = 0.02, data = satDf[4,]) +
+  geom_text(aes(label = 4), size = 3, nudge_x = -0.015,
+                nudge_y = 0.02, data = satDf[4,]) +
   theme_light() +
   theme(panel.grid = element_blank()) +
   geom_hline(yintercept = 0.5) +
